--- a/contents/booklogs/2025/2025-09.yml
+++ b/contents/booklogs/2025/2025-09.yml
@@ -102,3 +102,12 @@
     局所性を高めることはコードそのものの理解を助け、線形性を高めることは順序立てた処理の理解を助ける。
     やっぱプ脳と重なる分野の話。共感覚記憶・逐次記憶は触れられてなかった記憶だが。
     時代を考えると相当進んでるな。
+- date: 2025-09-11
+  bookTitle: プログラミングの心理学 25 周年記念版
+  pages: 273 ~ 288
+  notes: |
+    第 12 章 プログラミング言語の設計原則。
+    執筆当時はプログラミング言語が自然言語らしければ良いという考えだったみたい。
+    言語のターゲットに利用者の思考が捕われると多言語への移行が難しくなるというのは思考の硬直化みたいな感じ。
+    振り返りにも反省らしきことが書いてるがこの章は所謂「ぼくのかんがえたさいきょうの言語」なんやろな。
+    そのせいか、プ脳にもあるような心理学的観点をプログラミングに持ち込むのは興味があるけど、なんかこの章はおもんなかった。
