--- a/contents/booklogs/2025/2025-09.yml
+++ b/contents/booklogs/2025/2025-09.yml
@@ -111,3 +111,12 @@
     言語のターゲットに利用者の思考が捕われると多言語への移行が難しくなるというのは思考の硬直化みたいな感じ。
     振り返りにも反省らしきことが書いてるがこの章は所謂「ぼくのかんがえたさいきょうの言語」なんやろな。
     そのせいか、プ脳にもあるような心理学的観点をプログラミングに持ち込むのは興味があるけど、なんかこの章はおもんなかった。
+- date: 2025-09-12
+  bookTitle: プログラミングの心理学 25 周年記念版
+  pages: 289 ~ 295
+  notes: |
+    第 13 章 他のプログラミングの道具。
+    プログラムテストツールが、自信過剰なコードを信頼してしまうとか見当違いの所でバグを探しまうとかの心理的偏り外すをサポートをするのではないかという話。
+    これはもう時代的に静的解析も進んでるし TDD なり自動テストが普通だし何なら PBT のような人間の心理的な偏りの関わらないテスト手法があるようになった。
+    ただ現代を見ていると、そういった品質向上の一般的な手法だとかを導入することをチームと文化が許容できるかどうかというところが、問題なんやろな。
+    普遍的な話じゃなくツールの話なので、時代のギャップが特に大きくちょっと読むのが退屈。飽き気味なので早く最後まで読み終えてしまいたい。
