--- a/contents/booklogs/2025/2025-09.yml
+++ b/contents/booklogs/2025/2025-09.yml
@@ -120,3 +120,14 @@
     これはもう時代的に静的解析も進んでるし TDD なり自動テストが普通だし何なら PBT のような人間の心理的な偏りの関わらないテスト手法があるようになった。
     ただ現代を見ていると、そういった品質向上の一般的な手法だとかを導入することをチームと文化が許容できるかどうかというところが、問題なんやろな。
     普遍的な話じゃなくツールの話なので、時代のギャップが特に大きくちょっと読むのが退屈。飽き気味なので早く最後まで読み終えてしまいたい。
+- date: 2025-09-13
+  bookTitle: プログラミングの心理学 25 周年記念版
+  pages: 295 ~ 307
+  notes: |
+    第 13 章 他のプログラミングの道具。
+    オペレーティングシステム・タイムシェアリングシステムの仕組みによって生じる作業負荷・心理的負荷について。
+    OS 付きのデバッガて gdb みたいな話か？ほぼ使わずに来た。今どきは言語のデバッガを使うことが多かろうが 10 年近く使ってないのでよくわからない。
+    個人的にログや REPL しか見てないのだけど、これも立場は言語側かな。
+    今の時代は一度コンパイルエラーすると再試行の順番待ちに何日もかかるようなことはないし、この章で想定された負荷はかなり低かろうな。
+    逆に大規模なシステムでログを適切に出力していなくて、エラー発生時に即座に原因特定できず、取り敢えずログを増やして時間だけ過ぎてしまうというのは何度か見た。
+    そういう意味では開発の負荷は下がって運用の負荷が上がってるのかも知れんな。
