--- a/contents/booklogs/2025/2025-09.yml
+++ b/contents/booklogs/2025/2025-09.yml
@@ -131,3 +131,15 @@
     今の時代は一度コンパイルエラーすると再試行の順番待ちに何日もかかるようなことはないし、この章で想定された負荷はかなり低かろうな。
     逆に大規模なシステムでログを適切に出力していなくて、エラー発生時に即座に原因特定できず、取り敢えずログを増やして時間だけ過ぎてしまうというのは何度か見た。
     そういう意味では開発の負荷は下がって運用の負荷が上がってるのかも知れんな。
+- date: 2025-09-14
+  bookTitle: プログラミングの心理学 25 周年記念版
+  pages: 307 ~ 322
+  notes: |
+    第 13 章 他のプログラミングの道具。
+    ドキュメンテーション。
+    若干何のためのドキュメントが曖昧にしたまま文句をつけている風に見えるが、ドキュメンテーションがプログラミングのコストでないという考えがあるのは現代も変わらないな。
+    プロンプトを通じて AI と協業するようになり文書が人間だけのものでなくなったことで重要さが増しており、その結果誰のためのドキュメントかを考えて書き分ける必要が出てきているのが難しいところだと感じている。
+    AI に生成させるのも、コードから設計書を出すような自動化も同様。生成したドキュメントを人間の手で仕上げる状況が現状かなと。
+    振り返りの時点でも開発ツールの普及が課題であったようだけど、現状もあまり変わりない。
+    また AI agent にめちゃくちゃにさせないための開発ツールによるガードレールの役割が必須となり、まだまだツール類は発展の途上なんやろなと。
+    筆者とわたしで意見が異なるのは、こういうツールを多数用意しないためにより強い言語を使うべきという考えかな。
