--- a/contents/booklogs/2025/2025-09.yml
+++ b/contents/booklogs/2025/2025-09.yml
@@ -143,3 +143,11 @@
     振り返りの時点でも開発ツールの普及が課題であったようだけど、現状もあまり変わりない。
     また AI agent にめちゃくちゃにさせないための開発ツールによるガードレールの役割が必須となり、まだまだツール類は発展の途上なんやろなと。
     筆者とわたしで意見が異なるのは、こういうツールを多数用意しないためにより強い言語を使うべきという考えかな。
+- date: 2025-09-15
+  bookTitle: プログラミングの心理学 25 周年記念版
+  pages: 323 ~ 327
+  notes: |
+    第 V 部 エピローグ。
+    本書を読み終えた読者は行動観察のきっかけを得ている。コンピュータの黄金時代が人間にとって価値があるものになるよう努力し続けることを願う、という締め。
+    本書はこれで終わり。あとは細かい参考文献の紹介を読むのと解説もどきの解説者持論。
+    50 周年記念版が実現しないのは実に残念やな。 AI 時代のプログラミングを見たらさぞ思うところがあったろうに。
