--- a/contents/booklogs/2025/2025-09.yml
+++ b/contents/booklogs/2025/2025-09.yml
@@ -151,3 +151,12 @@
     本書を読み終えた読者は行動観察のきっかけを得ている。コンピュータの黄金時代が人間にとって価値があるものになるよう努力し続けることを願う、という締め。
     本書はこれで終わり。あとは細かい参考文献の紹介を読むのと解説もどきの解説者持論。
     50 周年記念版が実現しないのは実に残念やな。 AI 時代のプログラミングを見たらさぞ思うところがあったろうに。
+- date: 2025-09-16
+  bookTitle: プログラミングの心理学 25 周年記念版
+  pages: 328 ~ 358
+  notes: |
+    参考文献と解説。
+    参考文献の多くは日本語で読めないし年代から現代の状況と合わない可能性も高いが、どういった分野を調べれば良いか AI に聞いたり道筋を立てるのには十分意味がありそう。
+    解説は独自のまとめブログな感じで、最後に付け加えた用語集のような時代背景を補完するようなものだけに絞ればよかったのに、解説じゃないから本書をより深く理解するのには一切役立たない。
+    参考文献で一箇所だけ第四世代言語の文献があったが、人間中心の言語を目指した多くが消え去ったのを考えると筋は良くなかったのだろうなと。
+    実際 2000 年代に少し関わったが言語の表現力が低くてきつかった。
