--- a/contents/booklogs/2025/2025-09.yml
+++ b/contents/booklogs/2025/2025-09.yml
@@ -160,3 +160,13 @@
     解説は独自のまとめブログな感じで、最後に付け加えた用語集のような時代背景を補完するようなものだけに絞ればよかったのに、解説じゃないから本書をより深く理解するのには一切役立たない。
     参考文献で一箇所だけ第四世代言語の文献があったが、人間中心の言語を目指した多くが消え去ったのを考えると筋は良くなかったのだろうなと。
     実際 2000 年代に少し関わったが言語の表現力が低くてきつかった。
+- date: 2025-09-17
+  bookTitle: ピープルウエア ヤル気こそプロジェクト成功の鍵 第 3 版
+  pages: i ~ xx
+  notes: |
+    まえがきと目次。
+    本書ではシステムの仕事の社会学的な側面を考察する。
+    目次を見るに、人・環境・チームみたいな軸の話みたい。
+    解説もつまみ読みしたがちゃんと解説していて良い。
+    版を重ねるごとに内容も増えていて、第 3 版が 2013 。あと数年で 4 版が出てもいい頃合いか。
+    本書ではウェアじゃなくてウエアが正式名称なのでそれに倣う。
