--- a/contents/booklogs/2025/2025-09.yml
+++ b/contents/booklogs/2025/2025-09.yml
@@ -170,3 +170,16 @@
     解説もつまみ読みしたがちゃんと解説していて良い。
     版を重ねるごとに内容も増えていて、第 3 版が 2013 。あと数年で 4 版が出てもいい頃合いか。
     本書ではウェアじゃなくてウエアが正式名称なのでそれに倣う。
+- date: 2025-09-18
+  bookTitle: ピープルウエア ヤル気こそプロジェクト成功の鍵 第 3 版
+  pages: 1 ~ 20
+  notes: |
+    第Ⅰ部 人材を活用する。部品と違って交換不能な人的資源の扱い方について。
+    第 1 ~ 3 章。
+    ピープルウエアプロジェクトの調査対象のプロジェクトの 15% 、大規模プロジェクトだと 25% が完成しなかった。
+    いずれも失敗の原因を技術的要因と片付け、人に関する問題を軽視していた。マネージャーの多くはこういった人の問題に対処するすべを学んでいない。
+    システム開発のプロジェクトのように頭脳的な労働はチーズバーガー生産販売哲学のように何も考えずにとにかくマニュアル通り手を動かして解決できるものではない。
+    メンバーの個性を活かす・チームの結束を高めたり考える時間を確保する必要がある。
+    人の創造性を活かして生産性を生むのでなく、人から生産性を搾り取る方法だと、過度の残業からワーカホリックにつながり、プロジェクトを追えた暁にはメンバの離脱という付けを払うことになる。
+    平均的なソフトウェア開発者は読書しない、ってのも含め今も変わらないことが散りばめられてるな。時代を超えて変わってないのが笑える。
+    これは面白くて良いわ。
