--- a/contents/booklogs/2025/2025-09.yml
+++ b/contents/booklogs/2025/2025-09.yml
@@ -183,3 +183,13 @@
     人の創造性を活かして生産性を生むのでなく、人から生産性を搾り取る方法だと、過度の残業からワーカホリックにつながり、プロジェクトを追えた暁にはメンバの離脱という付けを払うことになる。
     平均的なソフトウェア開発者は読書しない、ってのも含め今も変わらないことが散りばめられてるな。時代を超えて変わってないのが笑える。
     これは面白くて良いわ。
+- date: 2025-09-18
+  bookTitle: ピープルウエア ヤル気こそプロジェクト成功の鍵 第 3 版
+  pages: 21 ~ 38
+  notes: |
+    第 4 ~ 6 章。
+    提供する品質を顧客の要求レベルに応じて下げることがヤル気を削ぐ要因になる。
+    パーキンソンの法則に従ってスケジュールを切り詰めるといった誤った目標設定はヤル気を削ぎ生産性を下げる。
+    生産性を渇望するあまり証拠に基づかない手法に飛びつくのはマネージャの仕事ではない。やるべきなのはメンバーを働く気にさせること。
+    日本が高品質で生産性が高いって話が載ってるが、わたしの 2000 年代の SES 経験では全くそんなことはなかったな。 20 年近く空いてるから時代が違うのかな。
+    無茶なスケジュールで走るより目標を設定しない方が生産性が高いというのは、経験上メンバーに自律性がないと上手くいかないけど、同意できる。
