--- a/contents/booklogs/2025/2025-09.yml
+++ b/contents/booklogs/2025/2025-09.yml
@@ -193,3 +193,15 @@
     生産性を渇望するあまり証拠に基づかない手法に飛びつくのはマネージャの仕事ではない。やるべきなのはメンバーを働く気にさせること。
     日本が高品質で生産性が高いって話が載ってるが、わたしの 2000 年代の SES 経験では全くそんなことはなかったな。 20 年近く空いてるから時代が違うのかな。
     無茶なスケジュールで走るより目標を設定しない方が生産性が高いというのは、経験上メンバーに自律性がないと上手くいかないけど、同意できる。
+- date: 2025-09-20
+  bookTitle: ピープルウエア ヤル気こそプロジェクト成功の鍵 第 3 版
+  pages: 39 ~ 56
+  notes: |
+    第Ⅱ部 オフィス環境と生産性。
+    第 7 ~ 8 章。
+    環境がプログラマーの作業効率に与える影響について。
+    集中を途切れさせて作業を中断しうる要素が作業効率を下げる。
+    往々にしてマネージャーは環境の改善に無頓着。
+    プログラマー個人の能力差より、良い環境を提供する文化に属していることが、生産性の高さにつながる可能性がある。
+    リモートワークで快適な作業環境を得るまでは、洒落たフリーアドレス、電話当番兼務、折りたたみ机とパイプ椅子、と色々体験してきた。
+    その経験から、リモートワークは緊急対応や密なコラボのような祭りには向かないけど、平常時の作業効率は段違いに高くできると実感している。
