--- a/contents/booklogs/2025/2025-09.yml
+++ b/contents/booklogs/2025/2025-09.yml
@@ -205,3 +205,14 @@
     プログラマー個人の能力差より、良い環境を提供する文化に属していることが、生産性の高さにつながる可能性がある。
     リモートワークで快適な作業環境を得るまでは、洒落たフリーアドレス、電話当番兼務、折りたたみ机とパイプ椅子、と色々体験してきた。
     その経験から、リモートワークは緊急対応や密なコラボのような祭りには向かないけど、平常時の作業効率は段違いに高くできると実感している。
+- date: 2025-09-21
+  bookTitle: ピープルウエア ヤル気こそプロジェクト成功の鍵 第 3 版
+  pages: 57 ~ 77
+  notes: |
+    第 9 ~ 10 章。
+    オフィス投資をケチって開放型オフィスにプログラマーを鮨詰めにすると、騒音レベルが上昇し、作業能率を著しく阻害する。
+    環境と作業能率の関係に気づかないのは、そもそも真面目に計測したことがないから。
+    フロー状態≒頭脳労働時間を計測することが重要。割り込みのない時間の係数を求めることで、環境を評価できる。
+    また頭脳労働時間でなく勤務時間≒肉体労働時間でプロジェクト進捗を分析した場合、それは意味のない危険なものになる。
+    時代の変化もあろうけど、なんとなく目的なしに異種交流を狙った開放型オフィスや出社強制が多い。
+    本当に集中すべき時とイノベーションにつなげたい時を区別するのに難あるのかな。
