--- a/contents/booklogs/2025/2025-09.yml
+++ b/contents/booklogs/2025/2025-09.yml
@@ -216,3 +216,13 @@
     また頭脳労働時間でなく勤務時間≒肉体労働時間でプロジェクト進捗を分析した場合、それは意味のない危険なものになる。
     時代の変化もあろうけど、なんとなく目的なしに異種交流を狙った開放型オフィスや出社強制が多い。
     本当に集中すべき時とイノベーションにつなげたい時を区別するのに難あるのかな。
+- date: 2025-09-22
+  bookTitle: ピープルウエア ヤル気こそプロジェクト成功の鍵 第 3 版
+  pages: 78 ~ 91
+  notes: |
+    第 11 ~ 12 章。
+    中断の最も多い理由は電話。メールなら受信側がいつ見るか選べるが、反面メッセージがいつ伝わるかという点で信頼性に劣る。
+    ケチって開放型のオフィスにしたとか見せかけの活気を求めて BGM を流すとかの画一的なオフィスよりも、目的ごとに区画が分かれたオフィスの方が良い意味で独創的なアイディアがでるだろう。
+    人それぞれ快適なオフィスが違うのだから、好きにさせておくのがマネージャの仕事。
+    現代なら電話以外にも音声チャットやビデオチャットというところか。
+    わたしは音声通話も mention も自分のタイミングでしか応答しない(というかミュートしてて気づかない)ので表明しててかつ許されてる方なのだろうな。
