--- a/contents/booklogs/2025/2025-09.yml
+++ b/contents/booklogs/2025/2025-09.yml
@@ -226,3 +226,15 @@
     人それぞれ快適なオフィスが違うのだから、好きにさせておくのがマネージャの仕事。
     現代なら電話以外にも音声チャットやビデオチャットというところか。
     わたしは音声通話も mention も自分のタイミングでしか応答しない(というかミュートしてて気づかない)ので表明しててかつ許されてる方なのだろうな。
+- date: 2025-09-23
+  bookTitle: ピープルウエア ヤル気こそプロジェクト成功の鍵 第 3 版
+  pages: 92 ~ 104
+  notes: |
+    第 13 章。
+    活気のあふれるオフィスを作る手段として、アレグザンダーのパターンに基づく手段がある。
+    本書では基本のパターンを補うオフィス設計の 4 つの失敗を是正するパターンを提案する。
+    過度の個室を避ける・窓を多くする・屋内と屋外スペースの調和・共有スペースといった具合に。
+    画一的なオフィスから抜け出して、個性的なオフィスを作ることが活力につながりプロジェクト成功の可能性を高める。
+    本書で言うようなうまく設計されたオフィスで働いたことがないのでなんとも実感がわかない。
+    ただ画一的で窓がなくてしかも天井が低くトイレも少ない現代的なオフィスは経験がある。
+    すし詰めでかなり苦しかったので、そこを抜け出すのは妥当な気がする。
