--- a/contents/booklogs/2025/2025-09.yml
+++ b/contents/booklogs/2025/2025-09.yml
@@ -238,3 +238,15 @@
     本書で言うようなうまく設計されたオフィスで働いたことがないのでなんとも実感がわかない。
     ただ画一的で窓がなくてしかも天井が低くトイレも少ない現代的なオフィスは経験がある。
     すし詰めでかなり苦しかったので、そこを抜け出すのは妥当な気がする。
+- date: 2025-09-24
+  bookTitle: ピープルウエア ヤル気こそプロジェクト成功の鍵 第 3 版
+  pages: 105 ~ 117
+  notes: |
+    第Ⅲ部 人材を揃える。
+    第 14 ~ 15 章。
+    無個性な駒で机上の戦争ゲームを考える戦略家としてのマネージャーの役割ではなく、人材を揃え辞めないようにする原則に基づく手法を紹介する。
+    親が子供を何年もかけて育てるのと違い、マネージャーは人材を選ぶ必要がある。
+    企業文化にあう均質な人材を選ぶのは不健全で、標準から外れても優秀な人材を選び、彼らの力を発揮させる必要がある。
+    リーダーシップは、権力による後押しで仕事をさせるのではなく、率先してリードし周りの触媒となるのが主たる役割。
+    人材の選択やリーダーシップに関しては、まだ本書で言うような有機的な組織の特徴をうまく取り入れれるところは多くなさそう。
+    不言実行のところ、表明する暇があれば手を動かした方が速いという点でも同意できる。許可さえ貰えばあとはやる的な。
