--- a/contents/booklogs/2025/2025-09.yml
+++ b/contents/booklogs/2025/2025-09.yml
@@ -250,3 +250,14 @@
     リーダーシップは、権力による後押しで仕事をさせるのではなく、率先してリードし周りの触媒となるのが主たる役割。
     人材の選択やリーダーシップに関しては、まだ本書で言うような有機的な組織の特徴をうまく取り入れれるところは多くなさそう。
     不言実行のところ、表明する暇があれば手を動かした方が速いという点でも同意できる。許可さえ貰えばあとはやる的な。
+- date: 2025-09-25
+  bookTitle: ピープルウエア ヤル気こそプロジェクト成功の鍵 第 3 版
+  pages: 118 ~ 130
+  notes: |
+    第 16 ~ 18 章。
+    ヒトを雇う際に何ができるか実際に見ずに話だけで決めるのがおかしいという話。
+    また適性検査についても自己評価に利用するなら良いが採用で使うようなものではないとのこと。
+    これはプログラミングの心理学でも似た話があって時代を感じさせる。
+    人材の多様化によってチームで上手くやっていくためのランチ会などの tips 等。
+    あと所謂「若い世代」の注意の分散と仕事でのフロー状態の相性と仕事での注意の向け方に馴染むための話。
+    この世代をまたいだチームの話は最近の事情を酌んでいて面白い。似たような違いを動画で勉強するか否かでも感じる(わたしは動画を使わない)。
