--- a/contents/booklogs/2025/2025-09.yml
+++ b/contents/booklogs/2025/2025-09.yml
@@ -261,3 +261,14 @@
     人材の多様化によってチームで上手くやっていくためのランチ会などの tips 等。
     あと所謂「若い世代」の注意の分散と仕事でのフロー状態の相性と仕事での注意の向け方に馴染むための話。
     この世代をまたいだチームの話は最近の事情を酌んでいて面白い。似たような違いを動画で勉強するか否かでも感じる(わたしは動画を使わない)。
+- date: 2025-09-26
+  bookTitle: ピープルウエア ヤル気こそプロジェクト成功の鍵 第 3 版
+  pages: 131 ~ 148
+  notes: |
+    第 19 ~ 20 章。
+    退職は見えるコストも見えないコストも含め無駄である。オフィスの移転も従業員に負荷を課すだけで無意味。
+    社内にコミュニティができることで長く続けることに繋がり、教育によって良い組織になりうる。
+    人的資産への投資は勘定科目上経費になるため軽く見がちだが、そうではない。
+    ベテランが抜けた穴を新人で埋めると生産性が回復するまでに非常にコストがかかることからも、人材への投資を回収するのが非常に難しいことがわかる。
+    移転の件は日本なら忌まわしき転勤も同じ悪影響があるなと思った。
+    ただ長く居続けられると、自律的に変化を注入することができる人も組織もそうないし、それだけ人材が均質化するから両刃の剣ではあるよな。
