--- a/contents/booklogs/2025/2025-09.yml
+++ b/contents/booklogs/2025/2025-09.yml
@@ -272,3 +272,16 @@
     ベテランが抜けた穴を新人で埋めると生産性が回復するまでに非常にコストがかかることからも、人材への投資を回収するのが非常に難しいことがわかる。
     移転の件は日本なら忌まわしき転勤も同じ悪影響があるなと思った。
     ただ長く居続けられると、自律的に変化を注入することができる人も組織もそうないし、それだけ人材が均質化するから両刃の剣ではあるよな。
+- date: 2025-09-27
+  bookTitle: ピープルウエア ヤル気こそプロジェクト成功の鍵 第 3 版
+  pages: 149 ~ 160
+  notes: |
+    第Ⅳ部 生産性の高いチームを育てる。
+    第 21 ~ 22 章。
+    仕事の楽しい思い出は往々にして仕事自体ではなく結束して取り組んだチームによるところが大きい。うまく結束したチームとは何か、その作り方について。
+    結束したチームは共通の目標を持ち、その実現に向けて協力しあう。その勢いがあるので管理は必要ない。
+    結束したチームは、退職率の低さ・強い一体感・選抜された意識・成果物の共有意識・明らかな楽しさといった特徴を持つ。
+    チームが自律的に成長し、メンバーが入れ替わってもチームのエネルギーと個性が生き続けた例として、ブラックチームを挙げる。
+    「結束感」みたいな感覚はもう随分感じてないな。
+    自分の経験では、できたてのチームというのは祭りみたいなものでそれだけで結束力があるのだけど、徐々に待遇の違いといった外圧や互いの不信で勢いが落ちていく。
+    チームメンバー間の信頼関係が強固ならその勢いを削がないようにできるのかなと思っている。特に根拠があるわけでない。
