--- a/contents/booklogs/2025/2025-09.yml
+++ b/contents/booklogs/2025/2025-09.yml
@@ -285,3 +285,17 @@
     「結束感」みたいな感覚はもう随分感じてないな。
     自分の経験では、できたてのチームというのは祭りみたいなものでそれだけで結束力があるのだけど、徐々に待遇の違いといった外圧や互いの不信で勢いが落ちていく。
     チームメンバー間の信頼関係が強固ならその勢いを削がないようにできるのかなと思っている。特に根拠があるわけでない。
+- date: 2025-09-28
+  bookTitle: ピープルウエア ヤル気こそプロジェクト成功の鍵 第 3 版
+  pages: 161 ~ 169
+  notes: |
+    第 23 章。
+    チームの育成は農業にて完全に制御できるものではない。そこで本章ではチームが自然に育つのを阻害する 7 つの要素を挙げられている。
+    部下の能力を信用しない守りのマネジメント。
+    部下に頭を使わない書類仕事させる≒官僚主義では目標の大切さは伝わらない。
+    チームの作業場所を分散すると日常会話から結束を育む機会が失われる。
+    複数のプロジェクトを掛け持ちさせるとチームとの時間も細分化され結束できなくなる。
+    コスト削減のために短期で製品を仕上げ品質を落とすと、チームの喜びが奪われ一体感が失われる。
+    マネージャーがチームにはっぱをかけるためハッタリの納期を設定すると、チームの信頼を失う。
+    経営陣のチームへの恐ろしく低い興味から、プロジェクト毎にチームを解散させてしまう。
+    妙に解像度高いのは、それだけどこでもある問題ということやろな。自分でもよくある話ばかりと感じた。
