--- a/contents/booklogs/2025/2025-09.yml
+++ b/contents/booklogs/2025/2025-09.yml
@@ -299,3 +299,14 @@
     マネージャーがチームにはっぱをかけるためハッタリの納期を設定すると、チームの信頼を失う。
     経営陣のチームへの恐ろしく低い興味から、プロジェクト毎にチームを解散させてしまう。
     妙に解像度高いのは、それだけどこでもある問題ということやろな。自分でもよくある話ばかりと感じた。
+- date: 2025-09-29
+  bookTitle: ピープルウエア ヤル気こそプロジェクト成功の鍵 第 3 版
+  pages: 170 ~ 183
+  notes: |
+    第 24 ~ 25 章。
+    チームが自然に育つのを阻害するさらに 2 つの要素。
+    忌々しいポスターや会社のスローガン入り動機づけグッズは経営層の不勉強差を明らかにする。
+    残業で分担できない痛みが上手くいっていたチームに不和をもたらす。ワインバーグ流に言うと仕事が期限通りにいかない場合に避難から身を守る手段として人は残業する。
+    競争は調和の取れたチーム内のコミュニケーションを阻害する。例えば年次評価や目標管理が競争を煽る。
+    随分昔から評価制度と目標管理の問題点が指摘されてたのか。
+    なくならないのは単に経営層の興味の無さと不勉強だけのせいでなく組織的に表面的な統制が必要だからやろな。個人的に要らない派やけど。
