--- a/contents/booklogs/2025/2025-09.yml
+++ b/contents/booklogs/2025/2025-09.yml
@@ -310,3 +310,12 @@
     競争は調和の取れたチーム内のコミュニケーションを阻害する。例えば年次評価や目標管理が競争を煽る。
     随分昔から評価制度と目標管理の問題点が指摘されてたのか。
     なくならないのは単に経営層の興味の無さと不勉強だけのせいでなく組織的に表面的な統制が必要だからやろな。個人的に要らない派やけど。
+- date: 2025-09-30
+  bookTitle: ピープルウエア ヤル気こそプロジェクト成功の鍵 第 3 版
+  pages: 181 ~ 191
+  notes: |
+    第 26 ~ 27 章。
+    チームのみんなで作るスパゲティディナー。生まれつきの良いマネージャーは意図せずチームが成功する小さな機会を頻繁に提供する。
+    マネージャーはチームのメンバーを信頼し、自主性を尊重して、部下の行動に責任を取る。
+    チームのメンバーは、一緒に働きたいと思える人と仕事をしたがる。これは採用についても重要な要素になる。
+    この点では所謂カジュアル面談は(全然隠れてない)隠れ選考として効果があるということか。
