--- a/contents/booklogs/2025/2025-10.yml
+++ b/contents/booklogs/2025/2025-10.yml
@@ -8,3 +8,15 @@
     チームのメンバーの多様性を保ち、優れたチームを継続させる。
     ここで言うマネージャーはリーダーシップを取らない。サーバントリーダーシップに近いのかな。
     リーダーシップを取るのはチームのメンバーであるというのは、ワインバーグ氏の考え方とも合致するな。
+- date: 2025-10-02
+  bookTitle: ピープルウエア ヤル気こそプロジェクト成功の鍵 第 3 版
+  pages: 201 ~ 210
+  notes: |
+    第Ⅴ部 肥沃な土壌。
+    チームはより大きい組織のコンテキスト≒企業文化の影響下にあることを知ってく必要がある。
+    第 29 章。
+    組織の効率化のためのシステムは、典型的な業務を念頭に置いているため、例外的な状況に対処できない。
+    例えば方法論がそう。方法論は平凡な社員から優れた成果を得るために上から押し付けられる決定論的な手法である。
+    それは人から責任と意欲を奪い、仕事を破壊する。
+    もし統一的な手法を広めたいのであれば、薄い標準を、研修の実施・ツールやレビューの形で緩やかに広める必要がある。
+    本書の時代から数十年経った現在でも「ある手法」が全てを解決するかのように話す著名人は多い。時が経っても学ばないな。
