--- a/contents/booklogs/2025/2025-10.yml
+++ b/contents/booklogs/2025/2025-10.yml
@@ -20,3 +20,14 @@
     それは人から責任と意欲を奪い、仕事を破壊する。
     もし統一的な手法を広めたいのであれば、薄い標準を、研修の実施・ツールやレビューの形で緩やかに広める必要がある。
     本書の時代から数十年経った現在でも「ある手法」が全てを解決するかのように話す著名人は多い。時が経っても学ばないな。
+- date: 2025-10-03
+  bookTitle: ピープルウエア ヤル気こそプロジェクト成功の鍵 第 3 版
+  pages: 211 ~ 222
+  notes: |
+    第 30 ~ 31 章。
+    取るべきリスクを可能性を秘めた取らず、取らざるべき馬鹿げたリスクを取る会社が増えてきている。
+    自分達が失敗した場合に備えた代替策を管理できないのは、失敗する可能性を恐れて考えないようにしているから。
+    自分たちが遅れることのリスクを管理できないのは、その仕事がどうでも良いものだから。
+    会議をやり過ぎるか、やらな過ぎるか。会議をやり過ぎるのは、私欲・無駄話・儀式・不安などによる。
+    健全な会議は必要な人が必要な場で話し合うようなオープンスペースでのネットワーキングのようなコミュニケーションである。
+    会議多過ぎは、現代でも油断すると無策にとりあえず集まってという形でやりがちな気がする。喋り過ぎは身に覚えがあるので行動を変えたい。
