--- a/contents/booklogs/2025/2025-10.yml
+++ b/contents/booklogs/2025/2025-10.yml
@@ -31,3 +31,15 @@
     会議をやり過ぎるか、やらな過ぎるか。会議をやり過ぎるのは、私欲・無駄話・儀式・不安などによる。
     健全な会議は必要な人が必要な場で話し合うようなオープンスペースでのネットワーキングのようなコミュニケーションである。
     会議多過ぎは、現代でも油断すると無策にとりあえず集まってという形でやりがちな気がする。喋り過ぎは身に覚えがあるので行動を変えたい。
+- date: 2025-10-04
+  bookTitle: ピープルウエア ヤル気こそプロジェクト成功の鍵 第 3 版
+  pages: 223 ~ 233
+  notes: |
+    第 32 ~ 33 章。
+    マネジメント自体が時間を浪費するケースについて。マネージャー自身が儀式的な会議でチームの時間を浪費してしまう。
+    時間的制約が厳しいプロジェクトで、不用意に人を早期から導入し時間を浪費してしまう。どうせ遅れるなら人員の導入を断るべき。
+    更に導入した人員が少数精鋭メンバの貴重な時間を浪費してしまう。
+    E メールのお陰でコミュケーションのコストが下がったが、多くの調整メールは無駄である。
+    知る必要のない情報を送りつけるのは社内スパムといえる。 FYI を送らなければならない状況は組織の機能不全の傾向である。
+    「沈黙は同意なり」の不文律に基づく提案メールが飛び交うのは、組織の機能不全の傾向である。
+    わたしも関係者から意見が得られないので期限を切って沈黙は同意とみなすメッセージを送ることがある。許可だけを得るのが目的だが、もうそれすら不要なのかもな。
