--- a/contents/booklogs/2025/2025-10.yml
+++ b/contents/booklogs/2025/2025-10.yml
@@ -43,3 +43,13 @@
     知る必要のない情報を送りつけるのは社内スパムといえる。 FYI を送らなければならない状況は組織の機能不全の傾向である。
     「沈黙は同意なり」の不文律に基づく提案メールが飛び交うのは、組織の機能不全の傾向である。
     わたしも関係者から意見が得られないので期限を切って沈黙は同意とみなすメッセージを送ることがある。許可だけを得るのが目的だが、もうそれすら不要なのかもな。
+- date: 2025-10-05
+  bookTitle: ピープルウエア ヤル気こそプロジェクト成功の鍵 第 3 版
+  pages: 234 ~ 243
+  notes: |
+    第 34 章。
+    システムの仕事は人を変化させるものであり、同時に開発者も新技術や新しい手法に変化していくことが求められる。
+    しかし人は変化を憎んでいる。反対は情緒的なもの。変化は古い習慣の利益供与者からは反対を受け、唯一質問者だけが味方たりうる。
+    サティアの変化のモデルでは、必ず最初に混乱を伴うことが警告されている。
+    変化は人々に安全地帯から出ることを要求するが、人々は失敗して恥をかくことを恐れるため、失敗が許される環境でなければ成功することはない。
+    バージニア・サティアはワインバーグ氏も推してたので調べてみるのも良いかも。
