--- a/contents/booklogs/2025/2025-10.yml
+++ b/contents/booklogs/2025/2025-10.yml
@@ -53,3 +53,14 @@
     サティアの変化のモデルでは、必ず最初に混乱を伴うことが警告されている。
     変化は人々に安全地帯から出ることを要求するが、人々は失敗して恥をかくことを恐れるため、失敗が許される環境でなければ成功することはない。
     バージニア・サティアはワインバーグ氏も推してたので調べてみるのも良いかも。
+- date: 2025-10-06
+  bookTitle: ピープルウエア ヤル気こそプロジェクト成功の鍵 第 3 版
+  pages: 244 ~ 254
+  notes: |
+    第 35 ~ 36 章。
+    組織の学習の過程で、主導する人材にだけ知識が偏る時期がある。人材が離れれば学習効果が失われるため、組織の学習能力は人材を引き止めておけるがで決まるといえる。
+    組織の学習の中枢は中間管理職のネットワークに置くのが良いが、中間管理職の整理で失われるリスクが有る。またマネージャーを集めただけの仮初のチームだと学習の鋳巣として機能しない。
+    現代では本当の意味のコミュニティは身近から消えたが、見つけられるとしたらオフィスだ。
+    組織におけるコミュニティは人材のエンゲージメントを高める。人がやめないので投資効果も好循環するようになる。
+    コミュニティの素晴らしさや学習効率が高いのはよく知っているが、ほんとにそれしかないのかなというのはいつも思うな。
+    仲良しクラブじゃ、あまり干渉されたくない身としては、息苦しい。
