--- a/contents/booklogs/2025/2025-10.yml
+++ b/contents/booklogs/2025/2025-10.yml
@@ -64,3 +64,16 @@
     組織におけるコミュニティは人材のエンゲージメントを高める。人がやめないので投資効果も好循環するようになる。
     コミュニティの素晴らしさや学習効率が高いのはよく知っているが、ほんとにそれしかないのかなというのはいつも思うな。
     仲良しクラブじゃ、あまり干渉されたくない身としては、息苦しい。
+- date: 2025-10-07
+  bookTitle: ピープルウエア ヤル気こそプロジェクト成功の鍵 第 3 版
+  pages: 255 ~ 266
+  notes: |
+    第Ⅳ部 きっとそこは楽しいところ。
+    仕事は楽しくあってはならないとい考え方があるが、ここでは仕事は楽しくあるべきだと考え方を推す。
+    第 37 章。
+    仕事が楽しいのは混乱したものに秩序をもたらすときである。優れたマネージャなら部下にその機会を配分できる。
+    ここではそのような小さな混乱をチームに注入して楽しむ術を挙げる。
+    パイロットプロジェクト・プログラミングコンテスト・ブレーンストーミング・研修・旅行・カンファレンス・お祭り・冒険旅行。
+    個人的に数年前から会社が旅行とかお祭りとかを企画したら信用しないし結構断ってきた。
+    実際に障害対応のような緊急の祭りがチームのつながりが強くするが、それは仕事を通じてのつながりだから意味があると思ってて、先に挙げたようなのは情緒的な部分でビジネスの至らぬ点を有耶無耶にしようとしたり干渉がきつくて好かん。
+    仕事は楽しくあるべきというのは大賛成だが、仕事を楽しみたいのであって、今はもうお祭りを楽しみたいわけじゃないねんよな。
