--- a/contents/booklogs/2025/2025-10.yml
+++ b/contents/booklogs/2025/2025-10.yml
@@ -77,3 +77,11 @@
     個人的に数年前から会社が旅行とかお祭りとかを企画したら信用しないし結構断ってきた。
     実際に障害対応のような緊急の祭りがチームのつながりが強くするが、それは仕事を通じてのつながりだから意味があると思ってて、先に挙げたようなのは情緒的な部分でビジネスの至らぬ点を有耶無耶にしようとしたり干渉がきつくて好かん。
     仕事は楽しくあるべきというのは大賛成だが、仕事を楽しみたいのであって、今はもうお祭りを楽しみたいわけじゃないねんよな。
+- date: 2025-10-08
+  bookTitle: ピープルウエア ヤル気こそプロジェクト成功の鍵 第 3 版
+  pages: 267 ~ 276
+  notes: |
+    第 38 ~ 39 章。本書の本編はこれで終わり。
+    優秀でヤル気がある社員が組織から離れないように自由電子のように自分のやりたい仕事で組織に貢献してもらう。
+    自律的な組織だとメンバーは自由電子のように動くんやろな。わたしもそういう動きをやらせてもらってるおかげでこれまでの仕事で一番パフォ出てると思う。
+    組織に課題を感じている人は本書で得たアドバイスで組織に変化をもたらす。そのためには身近なホルガー・ダンスクいわば眠れる同志の力を借りて行動を起こそう、という感じで締めか。
