--- a/contents/booklogs/2025/2025-10.yml
+++ b/contents/booklogs/2025/2025-10.yml
@@ -85,3 +85,11 @@
     優秀でヤル気がある社員が組織から離れないように自由電子のように自分のやりたい仕事で組織に貢献してもらう。
     自律的な組織だとメンバーは自由電子のように動くんやろな。わたしもそういう動きをやらせてもらってるおかげでこれまでの仕事で一番パフォ出てると思う。
     組織に課題を感じている人は本書で得たアドバイスで組織に変化をもたらす。そのためには身近なホルガー・ダンスクいわば眠れる同志の力を借りて行動を起こそう、という感じで締めか。
+- date: 2025-10-09
+  bookTitle: ピープルウエア ヤル気こそプロジェクト成功の鍵 第 3 版
+  pages: 277 ~ 300
+  notes: |
+    第 2 版時の訳者あとがき、著者注、参考文献。
+    訳者と著者の関係からも訳が良いのに納得。また第 2 版出版当時の日本では本書で触れた価値観にピンとこない人が多かったであろうことに触れられている。
+    これは恐らく現在でも変わらないんじゃないかな。自分の仕事や人生に責任を取れる人がどれ程いるか怪しい。
+    全体的に面白かった。いまや古典となっても面白かったということは、流行や文脈に依存しない普遍性を持ってるからだと考えると、現代でも応用がきくな。
