--- a/contents/books/books.yaml
+++ b/contents/books/books.yaml
@@ -75,6 +75,6 @@
 - id: the-psychology-of-computer-programming
   bookTitle: プログラミングの心理学 25 周年記念版
   bookAuthor: Gerald. M. Weinberg, 伊豆原弓
-- id: poppleware
+- id: peopleware
   bookTitle: ピープルウエア ヤル気こそプロジェクト成功の鍵 第 3 版
   bookAuthor: Tom DeMarco, Timothy Lister, 松原友夫, 山浦恒央, 長尾高弘
