--- a/contents/books/books.yaml
+++ b/contents/books/books.yaml
@@ -78,3 +78,6 @@
 - id: peopleware
   bookTitle: ピープルウエア ヤル気こそプロジェクト成功の鍵 第 3 版
   bookAuthor: Tom DeMarco, Timothy Lister, 松原友夫, 山浦恒央, 長尾高弘
+- id: deadline
+  bookTitle: デッドライン ソフト開発を成功に導く 101 の法則
+  bookAuthor: Tom DeMarco, 伊豆原弓
