--- a/contents/booklogs/2025/2025-10.yml
+++ b/contents/booklogs/2025/2025-10.yml
@@ -93,3 +93,10 @@
     訳者と著者の関係からも訳が良いのに納得。また第 2 版出版当時の日本では本書で触れた価値観にピンとこない人が多かったであろうことに触れられている。
     これは恐らく現在でも変わらないんじゃないかな。自分の仕事や人生に責任を取れる人がどれ程いるか怪しい。
     全体的に面白かった。いまや古典となっても面白かったということは、流行や文脈に依存しない普遍性を持ってるからだと考えると、現代でも応用がきくな。
+- date: 2025-10-10
+  bookTitle: デッドライン ソフト開発を成功に導く 101 の法則
+  pages: i ~ vi, 1 ~ 10
+  notes: |
+    はじめに～ 1 まで。ジョージ・ガモフの不思議の国のトムキンスに倣って、デマルコ流のヒトに重点を置いたプロジェクト管理をトムキンスを使って説明する、って趣旨みたい。
+    小説調なのでまだ大した進展なし。もっと読む量増やした方が多分理解の進みもよかろうが、今はちょっと時間が取れんので最低 1 セクションは読む感じで進めていく。
+    不思議の国のトムキンスも知らないので積読候補に。
