--- a/contents/booklogs/2025/2025-10.yml
+++ b/contents/booklogs/2025/2025-10.yml
@@ -100,3 +100,11 @@
     はじめに～ 1 まで。ジョージ・ガモフの不思議の国のトムキンスに倣って、デマルコ流のヒトに重点を置いたプロジェクト管理をトムキンスを使って説明する、って趣旨みたい。
     小説調なのでまだ大した進展なし。もっと読む量増やした方が多分理解の進みもよかろうが、今はちょっと時間が取れんので最低 1 セクションは読む感じで進めていく。
     不思議の国のトムキンスも知らないので積読候補に。
+- date: 2025-10-11
+  bookTitle: デッドライン ソフト開発を成功に導く 101 の法則
+  pages: 11 ~ 48
+  notes: |
+    本書は、エピソードと、そこからトムキンスが得て日記に書いたプロジェクト管理の原則でセットになってる。
+    2 ~ 3 までの原則は、プロジェクトには変更がつきもの、懲罰をもって焚き付けることは人を萎縮させプロジェクトに不利益をもたらす。
+    さらに懲罰でもってしても目的を達成できない場合、懲罰を実行しなければ誰も信じなくなり、実行すればさらに萎縮する悪循環に陥る。
+    ピープルウエアで語られていた内容のおさらい的にサクサク読めそう。
