--- a/contents/booklogs/2025/2025-10.yml
+++ b/contents/booklogs/2025/2025-10.yml
@@ -108,3 +108,12 @@
     2 ~ 5 までの原則は、プロジェクトには変更がつきもの、懲罰をもって焚き付けることは人を萎縮させプロジェクトに不利益をもたらす。
     さらに懲罰でもってしても目的を達成できない場合、懲罰を実行しなければ誰も信じなくなり、実行すればさらに萎縮する悪循環に陥る。
     ピープルウエアで語られていた内容のおさらい的にサクサク読めそう。
+- date: 2025-10-12
+  bookTitle: デッドライン ソフト開発を成功に導く 101 の法則
+  pages: 49 ~ 94
+  notes: |
+    6 ~ 9 までの原則。マネージャは腹を決めて自身の直感を信じチームに魂を吹き込む。同時に無駄を嗅ぎ分ける鼻が必要。
+    戦いが始まった時、マネージャの下準備を含めた仕事は終わっている。下準備が不十分なら効果は薄れる。
+    短期的に生産性を高める方法はない。
+    時間を無駄にする方法はいくらでもある。無駄を避けるにはリスクを管理して初期の兆候のうちに対処する。
+    ベリンダのくだりは組織の均質でない人材を取り入れるの点も感じられたな。
