--- a/contents/booklogs/2025/2025-10.yml
+++ b/contents/booklogs/2025/2025-10.yml
@@ -117,3 +117,13 @@
     短期的に生産性を高める方法はない。
     時間を無駄にする方法はいくらでもある。無駄を避けるにはリスクを管理して初期の兆候のうちに対処する。
     ベリンダのくだりは組織の均質でない人材を取り入れるの点も感じられたな。
+- date: 2025-10-13
+  bookTitle: デッドライン ソフト開発を成功に導く 101 の法則
+  pages: 95 ~ 152
+  notes: |
+    10 ~ 12 までの原則。プロジェクトを完了させる直感をモデル化してシミュレーションし、議論や実績を反映して改善する。
+    そのモデルの入力となる仕事のサイズを測定する。サイズは独自の尺度でもよい。
+    過去のデータも同様に測定し、サイズと生産性の関係を分析する。
+    健全な組織でも病んだ政治が発生し、その悪影響を受けることがある。病んだ政治は個人の目標が組織のそれより優先されることを特徴とする。
+    病んだ政治の副作用で、少数精鋭プロジェクトは不安のため間違ったこととわかっていても人を投入する。
+    ここでいう iThink は STELLA というシステム思考のためのツールらしい。仕事の流量をモデリングするってのを考えたことがなかったので勉強になる。
