--- a/contents/booklogs/2025/2025-10.yml
+++ b/contents/booklogs/2025/2025-10.yml
@@ -127,3 +127,14 @@
     健全な組織でも病んだ政治が発生し、その悪影響を受けることがある。病んだ政治は個人の目標が組織のそれより優先されることを特徴とする。
     病んだ政治の副作用で、少数精鋭プロジェクトは不安のため間違ったこととわかっていても人を投入する。
     ここでいう iThink は STELLA というシステム思考のためのツールらしい。仕事の流量をモデリングするってのを考えたことがなかったので勉強になる。
+- date: 2025-10-14
+  bookTitle: デッドライン ソフト開発を成功に導く 101 の法則
+  pages: 153 ~ 200
+  notes: |
+    13 ~ 15 の原則。
+    標準化された形式的なプロセス改良は時間と金がかかり、その維持にもコストがかかる。改良により得られる生産性がそれらのコストを相殺できる可能性は低い。
+    優れた技術労働者はそれなくしても絶えずプロセスを改良し優れたたプロセスに焦点をあてる。
+    優れたプロジェクトは設計にかける時間が多く結果的にデバッグに費やす時間が少なくなり、プロジェクトの成績を大幅に高める可能性がある。
+    圧力をかけて残業時間を増やしても生産性には貢献せず、かけすぎると必ず失敗する。
+    これらを使う本当の理由は、マネージャーがどうすべきかわからなくて失敗することをごまかすため。
+    設計のところ、低レベルまで緻密に設計してってのは、 TDD やら強い静的型付けを使うところに通ずると思った。
