--- a/contents/booklogs/2025/2025-10.yml
+++ b/contents/booklogs/2025/2025-10.yml
@@ -138,3 +138,14 @@
     圧力をかけて残業時間を増やしても生産性には貢献せず、かけすぎると必ず失敗する。
     これらを使う本当の理由は、マネージャーがどうすべきかわからなくて失敗することをごまかすため。
     設計のところ、低レベルまで緻密に設計してってのは、 TDD やら強い静的型付けを使うところに通ずると思った。
+- date: 2025-10-15
+  bookTitle: デッドライン ソフト開発を成功に導く 101 の法則
+  pages: 201 ~ 247
+  notes: |
+    16 ~ 幕間 の原則。
+    管理者の怒りと侮辱は部下に伝染する。怒りと侮辱は管理能力の不足であり、それで業績は良くならない。
+    曖昧な仕様書は対立を解決できず曖昧なままやり過ごした産物。対立は、多数の人が関わるシステムの構築・導入では避けられない。
+    組織内の対立を尊重し落とし所を見つけられるよう、あらかじめその旨を宣言し勝利条件を定める。敵は問題で、人にあらず。
+    仲裁にはまず当事者の同意を得る必要が第一歩となる。中には自然とチームの結束を高める触媒のような人もいる。
+    知っていると高をくくっていて知らないことに致命的な人為的ミスが潜んでいる。
+    この触媒って、ピープルウエアでも触れられたリーダーシップかな。
