--- a/contents/booklogs/2025/2025-10.yml
+++ b/contents/booklogs/2025/2025-10.yml
@@ -149,3 +149,17 @@
     仲裁にはまず当事者の同意を得る必要が第一歩となる。中には自然とチームの結束を高める触媒のような人もいる。
     知っていると高をくくっていて知らないことに致命的な人為的ミスが潜んでいる。
     この触媒って、ピープルウエアでも触れられたリーダーシップかな。
+- date: 2025-10-16
+  bookTitle: デッドライン ソフト開発を成功に導く 101 の法則
+  pages: 247~ 312
+  notes: |
+    19 ~ 23 の原則。
+    プロジェクト初期に人数が多過ぎると仕事を分け与えるために設計以前に設計で考慮すべき分割が行われて、正しいインタフェース設計がされないまま各チームに渡される。
+    結果チーム間のコミュニケーションややり直しが増えフラストレーションが溜まり、妥当なスケジュールと人員で始めたプロジェクトよりも時間がかかる。
+    会議のムダを削るには、出る必要がない人がそれを判断できるように議事予定表を作りそれを守る。
+    議事にない情報を話すと知れない不安から必要がなくても出席してしまう。
+    怒りは恐怖の表れ。全てのメンバがそれを知れば怒りを表すことで恐怖していると伝わるのを避けるため、表面的に罵倒等の怒りを発しにくくなる。
+    病んだ政治のもとで無理に努力したり時間をムダにする必要はない。時間が解決したり、行動のチャンスを待つ(あるいは訪れるかわからない奇跡を)。
+    倹約精神は失敗に対する恐怖を誤魔化すためのコスト削減。
+    プロジェクトには目標と予想の 2 つが必要であり、互いに違って当然。
+    これで本書は終わり。面白かったのでもっとよく理解できるようまた読みたい。
