--- a/contents/booklogs/2025/2025-10.yml
+++ b/contents/booklogs/2025/2025-10.yml
@@ -163,3 +163,13 @@
     倹約精神は失敗に対する恐怖を誤魔化すためのコスト削減。
     プロジェクトには目標と予想の 2 つが必要であり、互いに違って当然。
     これで本書は終わり。面白かったのでもっとよく理解できるようまた読みたい。
+- date: 2025-10-17
+  bookTitle: Slack ゆとりの法則
+  pages: i ~ viii, 1 ~ 6
+  notes: |
+    はじめに。企業のスピードが速くなったことで高効率低コスト短時間で仕事ができるようになった。反面、猛スピードでの方向転換が無理なように、変化する柔軟性が失われた。
+    第Ⅰ部 ゆとり。変化を実現するにはゆとりが必要だ。効率とゆとりは相反するものであり、極限まで効率化されていると変化や再生ができなくなる。
+    第 1 章 斧を持った男。欧米の効率化の波は短期的には効果があったが長期的には害になりうる。
+    本書の目的の 1 つはレイオフの対象となりやすい変化の中枢たる中間管理職の重要性を検証すること。
+    ピープルウエアでも変化のセンターを中間管理職のチームに置くことを書いていた。
+    わたし自身は所属してきた組織が大きくないのも有り、そのような変化を起こせる中間管理職を知らない。新鮮みを感じながら読めそうな気がしてる。
