--- a/contents/booklogs/2025/2025-10.yml
+++ b/contents/booklogs/2025/2025-10.yml
@@ -165,7 +165,7 @@
     これで本書は終わり。面白かったのでもっとよく理解できるようまた読みたい。
 - date: 2025-10-17
   bookTitle: Slack ゆとりの法則
-  pages: i ~ viii, 1 ~ 6
+  pages: 1 ~ 16
   notes: |
     はじめに。企業のスピードが速くなったことで高効率低コスト短時間で仕事ができるようになった。反面、猛スピードでの方向転換が無理なように、変化する柔軟性が失われた。
     第Ⅰ部 ゆとり。変化を実現するにはゆとりが必要だ。効率とゆとりは相反するものであり、極限まで効率化されていると変化や再生ができなくなる。
