--- a/contents/booklogs/2025/2025-10.yml
+++ b/contents/booklogs/2025/2025-10.yml
@@ -173,3 +173,11 @@
     本書の目的の 1 つはレイオフの対象となりやすい変化の中枢たる中間管理職の重要性を検証すること。
     ピープルウエアでも変化のセンターを中間管理職のチームに置くことを書いていた。
     わたし自身は所属してきた組織が大きくないのも有り、そのような変化を起こせる中間管理職を知らない。新鮮みを感じながら読めそうな気がしてる。
+- date: 2025-10-18
+  bookTitle: Slack ゆとりの法則
+  pages: 17 ~ 34
+  notes: |
+    2 現代の仕事は労働者をノードとした巨大なネットワークであり、各労働者が忙しいと仕事が流れてきてもすぐに取りかかれない。最大限の効率は早さを犠牲にする。
+    3 効率化では人材を代替可能と考えるが、実際は切り替えのコスト(コンテキストスイッチ・チームの結束の喪失)で高くつく。忙しさだけが増し全体的な能力は低下する。
+    4 常に急いでいると、早く仕事を終えて手が空いた状態が遊びと見られる。そのためレイオフを逃れるために適度に遅く仕事をして「忙しい」状況を演出するため、全体的な速度は遅くなる。
+    どれも現実味があるな。組織の処理能力を超えた仕事量だと 2 と 3 が容易に起こる。
