--- a/contents/booklogs/2025/2025-10.yml
+++ b/contents/booklogs/2025/2025-10.yml
@@ -181,3 +181,14 @@
     3 効率化では人材を代替可能と考えるが、実際は切り替えのコスト(コンテキストスイッチ・チームの結束の喪失)で高くつく。忙しさだけが増し全体的な能力は低下する。
     4 常に急いでいると、早く仕事を終えて手が空いた状態が遊びと見られる。そのためレイオフを逃れるために適度に遅く仕事をして「忙しい」状況を演出するため、全体的な速度は遅くなる。
     どれも現実味があるな。組織の処理能力を超えた仕事量だと 2 と 3 が容易に起こる。
+- date: 2025-10-19
+  bookTitle: Slack ゆとりの法則
+  pages: 35 ~ 52
+  notes: |
+    5 どんな管理者の下にも1, 2 人は好奇心・勇気・豪胆・成長意欲を持ち備えた人材がいる。
+    そのような人材とその同僚のためにはなるべく管理せず自由にやらせるといった管理のゆとりが必要。
+    6 ここまで見てきたように、組織を柔軟に変化に対応できるようにする、人材を離れにくくする、投資の効果を高めるにはゆとりが必要。
+    ゆとりがないと投資効果が薄れるというのは結構分かるかもな。
+    一部のスタートアップではクラウドのコストの無駄と投資の判別もつかないまま突っ走っててんなアホなと思ったことがある。
+    PMF して金があればそういう遅延評価もあるかも知れんが、すぐにわかることを先延ばしにしてまで得られる速度は案外バランスしないんじゃないかな。
+    振り返る余裕もないようなら行動の正当性も評価できんしな。
