--- a/contents/booklogs/2025/2025-10.yml
+++ b/contents/booklogs/2025/2025-10.yml
@@ -192,3 +192,12 @@
     一部のスタートアップではクラウドのコストの無駄と投資の判別もつかないまま突っ走っててんなアホなと思ったことがある。
     PMF して金があればそういう遅延評価もあるかも知れんが、すぐにわかることを先延ばしにしてまで得られる速度は案外バランスしないんじゃないかな。
     振り返る余裕もないようなら行動の正当性も評価できんしな。
+- date: 2025-10-20
+  bookTitle: Slack ゆとりの法則
+  pages: 53 ~ 69
+  notes: |
+    第Ⅱ部 本当に速く仕事をするには。相互依存する時間とコストの両方を削減するプレッシャーのようなストレスが、個人だけでなく組織にどのような悪影響をもたらすか。
+    またゆとりがどのように解決手段となるのか。
+    7 プレッシャーで考えは速くならないので、短期的には超過勤務で仕事の所要時間が減るが、それ以上は減るどころか疲弊して逆に生産性を落としたり離職するリスクがある。
+    8 強気のスケジュールのように間違ったできない約束を結ぶのは管理者の奇妙な信仰。またその失敗の原因が労働者のせいにされがちだが、責任は管理者にある。
+    中長期的な超過勤務は燃え尽き症候群にもつながるしホント良くないよな。このアプローチも根底には人を代替可能と考えてる節がある。
