--- a/contents/booklogs/2025/2025-10.yml
+++ b/contents/booklogs/2025/2025-10.yml
@@ -201,3 +201,14 @@
     7 プレッシャーで考えは速くならないので、短期的には超過勤務で仕事の所要時間が減るが、それ以上は減るどころか疲弊して逆に生産性を落としたり離職するリスクがある。
     8 強気のスケジュールのように間違ったできない約束を結ぶのは管理者の奇妙な信仰。またその失敗の原因が労働者のせいにされがちだが、責任は管理者にある。
     中長期的な超過勤務は燃え尽き症候群にもつながるしホント良くないよな。このアプローチも根底には人を代替可能と考えてる節がある。
+- date: 2025-10-21
+  bookTitle: Slack ゆとりの法則
+  pages: 70 ~ 90
+  notes: |
+    9 時間外労働は適切なタイミングの短期集中なら効果があるが、恒常的だと疲労の蓄積・燃え尽きと離職・時間を無駄遣いするクセが正規の時間内労働の生産性を著しく下げる。
+    これは管理者も例外ではなく、やらなくてよい仕事に時間をかけ過ぎているだけ。
+    10 組織が時間外労働に報酬を払わないことで見かけ上は生産性が僅かにでも上がって見えるが、中長期的には前述の理由から生産性を落とす。
+    11 テクノロジーによって格上の仕事だと対面を保たれた頭脳労働を必要としない事務作業などで高給取りの管理者や開発者の時間が削られる。
+    アシスタントを置いた方が効率的だが組織上はオーバーヘッドと捉えられ「効率化」される。
+    時間外労働も事務作業も頷ける内容だ。ただそういう程度の低い組織に人が寄り付かなくならない限り組織が是正されることはなかろうなと、これまでの経験で思う。
+    そしてそうなるには今の時代でも大いに時間がかかるので、危うく感じたら自ら是正するかさっさと離れるか。
