--- a/contents/booklogs/2025/2025-10.yml
+++ b/contents/booklogs/2025/2025-10.yml
@@ -212,3 +212,13 @@
     アシスタントを置いた方が効率的だが組織上はオーバーヘッドと捉えられ「効率化」される。
     時間外労働も事務作業も頷ける内容だ。ただそういう程度の低い組織に人が寄り付かなくならない限り組織が是正されることはなかろうなと、これまでの経験で思う。
     そしてそうなるには今の時代でも大いに時間がかかるので、危うく感じたら自ら是正するかさっさと離れるか。
+- date: 2025-10-22
+  bookTitle: Slack ゆとりの法則
+  pages: 91 ~ 103
+  notes: |
+    12 間違った管理の法則、①うまくいかないことがあったら、もっとやれ ②自分自身のユーティリティ・プレーヤーになれ
+    管理者は自分の才能を活かし成功に焦点を合わせるが、能力がない管理者は原則にすがり、うまくいかないことに力を注ぎ続けてしまう。
+    管理は本質的に難しく挑戦的である。そこからの逃避であったり、部下の仕事を増やすまいと自分で低レベルの仕事に手を付けるのは、管理の放棄である。
+    13 口に出して言えない雰囲気・何よりも権力が勝る・服従しないものは罵倒される... 恐怖の文化がはびこる組織は失敗する。
+    その悪影響の一面に過剰な人員配置がある。概念設計の段階で何十人も配置されても仕事がないので、設計前から仕事を分けてあとは想像の通りの惨劇となる。
+    恐怖の文化はデッドラインにもあったやつだ。こういう文化は人が変わらない限り続くので近寄らないに限るが、自分がそうならないよう注意も必要。
