--- a/contents/booklogs/2025/2025-10.yml
+++ b/contents/booklogs/2025/2025-10.yml
@@ -222,3 +222,13 @@
     13 口に出して言えない雰囲気・何よりも権力が勝る・服従しないものは罵倒される... 恐怖の文化がはびこる組織は失敗する。
     その悪影響の一面に過剰な人員配置がある。概念設計の段階で何十人も配置されても仕事がないので、設計前から仕事を分けてあとは想像の通りの惨劇となる。
     恐怖の文化はデッドラインにもあったやつだ。こういう文化は人が変わらない限り続くので近寄らないに限るが、自分がそうならないよう注意も必要。
+- date: 2025-10-23
+  bookTitle: Slack ゆとりの法則
+  pages: 104 ~ 121
+  notes: |
+    14 訴訟は、恐怖の文化を持つ組織がクビにできない上層部の失敗に直面したとき、責任を外部になすりつけるために起こる。膨大な金と時間がかかり当事者全員が敗者となる。
+    健全な企業であればある程度の失敗にはチャンスが与えられる。訴訟になる契約の多くはひどいものであり、公正を欠いたゆとりのないものである。
+    15 ISO のような標準化された規格は役に立つが、それはインターフェイス規格であるからだ。かたや知識労働者のプロセスは標準化に適さない。
+    自動化に取り残された仕事の多くは難しいので、標準プロセスでは柔軟性を欠き、その多くの中身は空っぽ。
+    管理者が失敗する標準化に飛びつくのは、恐怖の文化により失敗を恐れるためであり、管理者がプロセスを所有し委譲されるべき権限が搾取される。
+    恐怖による支配の問題は深刻やな。プロセスについてはプラクティスが役に立つときもあるが、頼り過ぎるのが良くないということだと理解した。
