--- a/contents/booklogs/2025/2025-10.yml
+++ b/contents/booklogs/2025/2025-10.yml
@@ -232,3 +232,13 @@
     自動化に取り残された仕事の多くは難しいので、標準プロセスでは柔軟性を欠き、その多くの中身は空っぽ。
     管理者が失敗する標準化に飛びつくのは、恐怖の文化により失敗を恐れるためであり、管理者がプロセスを所有し委譲されるべき権限が搾取される。
     恐怖による支配の問題は深刻やな。プロセスについてはプラクティスが役に立つときもあるが、頼り過ぎるのが良くないということだと理解した。
+- date: 2025-10-23
+  bookTitle: Slack ゆとりの法則
+  pages: 122 ~ 142
+  notes: |
+    16 欠陥を少なくする品質向上プログラムは、本物の品質向上を困難にする。本当の品質とは欠陥の少なさではなくユーザの概念を覆し変えてしまうもの。
+    品質を高めるには時間を必要とし、また数量と反比例の関係にある。高品質なものを大量に作ることはできない。
+    17 効率と効果はフィッシャーの基本定理にあるように両立が難しい。流動的な市場経済ではリスクをとり効果を追求しないと成功しないが、目標管理のお陰で効率を選んでしまう。
+    18 目標管理はある状態が変わらないことを前提としその上で増分を検討する。現代では変わらない状態はなく、状態を変えないなら破滅の道へ進む。
+    目標を達成するために失われる顧客満足度がある。これをディスファンクション(機能障害)と呼ぶ。
+    無理やり作られた KPI ではないが昔やった MBO もわたしは合わなかった。仕事の優先順位が常に変わり半期や通期の目標が陳腐化する。結局いまのところは個人的な長期的展望のみが拠り所になってる。
