--- a/contents/booklogs/2025/2025-10.yml
+++ b/contents/booklogs/2025/2025-10.yml
@@ -242,3 +242,15 @@
     18 目標管理はある状態が変わらないことを前提としその上で増分を検討する。現代では変わらない状態はなく、状態を変えないなら破滅の道へ進む。
     目標を達成するために失われる顧客満足度がある。これをディスファンクション(機能障害)と呼ぶ。
     無理やり作られた KPI ではないが昔やった MBO もわたしは合わなかった。仕事の優先順位が常に変わり半期や通期の目標が陳腐化する。結局いまのところは個人的な長期的展望のみが拠り所になってる。
+- date: 2025-10-25
+  bookTitle: Slack ゆとりの法則
+  pages: 143 ~ 157
+  notes: |
+    第Ⅲ部 変化と成長
+    成長は変化の結果である。組織の変化と成長を実現するには、変化の障壁を取り除き、ビジョン、リーダーシップ、タイミングが必要で、それらはゆとりがあって初めて実現できる。
+    19 ビジョンは自分たちが何者であり何者でないか、変わるもの変わらないものを示す。成功するビジョンは現在と未来に関する真実を含む必要がある。
+    ビジョンがあって初めて先を見越した行動、つまり変化が起こせる。
+    20 リーダーシップは、ビジョンで方向性を示し、長期的な利益を高めるために短期的な痛みを受け入れることを認め、あとは人を巻き込み先に進む。本物のそれは組織図の権力のそのとにとも巻き込む。
+    21 ディルバートのようなお粗末な管理者に従うお粗末な管理をさせておく人々にもフォロワーシップの責任がある。
+    そのような問題に気づくのは変化を起こせる人であり、これが組織の最下層であれ変化のリーダーシップを取れる所以である。
+    このリーダーシップはピープルウエアでも触れられていたものでワインバーグ氏と同じ考え方。わたしもそうあるべきと考えてる。
