--- a/contents/booklogs/2025/2025-10.yml
+++ b/contents/booklogs/2025/2025-10.yml
@@ -254,3 +254,15 @@
     21 ディルバートのようなお粗末な管理者に従うお粗末な管理をさせておく人々にもフォロワーシップの責任がある。
     そのような問題に気づくのは変化を起こせる人であり、これが組織の最下層であれ変化のリーダーシップを取れる所以である。
     このリーダーシップはピープルウエアでも触れられていたものでワインバーグ氏と同じ考え方。わたしもそうあるべきと考えてる。
+- date: 2025-10-26
+  bookTitle: Slack ゆとりの法則
+  pages: 158 ~ 174
+  notes: |
+    22 変化には安全な現状から離れる恐怖・失敗するかも知れない恐怖が伴う。その種類の恐怖は学習を促進することもあり、変化を妨げるものではない。
+    変化を妨げるのは、変化を始めた者の苦しみに対する嘲笑・批判・軽視といった不遜な態度であり、組織から一層する必要がある。
+    23 信頼を得る方法としてよく言われる「信頼に足る行動をする」は現実的ではない。実際は信頼に足る行動をするよりも前に信頼を与え、成功のためにフォローする必要がある。つまり失敗するリスクを取る必要がある。
+    24 変化を導入するタイミングは落ち目ではなく上げ潮のときが最適。変化の抵抗勢力に挑むにはそれだけ有利な条件が必要。
+    25 組織の変化を担うのは中間管理職だが、コストカットに熱心な組織では削除の対象にもなりやすい。
+    中間管理職に変化を起こすだけのゆとり・失敗を許容する文化が与えられて初めて変化が起こる。
+    中間管理職のくだりはピープルウエアでも触れられてたが、そんなにピンときてない。
+    多くの企業では変化の渇望・実行力・権力すべてを持つって役職がここしかないってことかな？
