--- a/contents/booklogs/2025/2025-10.yml
+++ b/contents/booklogs/2025/2025-10.yml
@@ -266,3 +266,11 @@
     中間管理職に変化を起こすだけのゆとり・失敗を許容する文化が与えられて初めて変化が起こる。
     中間管理職のくだりはピープルウエアでも触れられてたが、そんなにピンときてない。
     多くの企業では変化の渇望・実行力・権力すべてを持つって役職がここしかないってことかな？
+- date: 2025-10-27
+  bookTitle: Slack ゆとりの法則
+  pages: 175 ~ 183
+  notes: |
+    ヒトは学習し続ける生き物だが、本当に重要な何かを学び直す機会では、支援する環境がないと受け入れるのが難しく、学習の機会を失う。
+    その支援とは指導者・教材・共同学習者である。管理者の場合はこれらを得るのが難しく、だからこそ中間管理者同士のコミュニケーションが発生する空白地帯が重要になる。
+    わたしは友人と輪読する以外は独学だけで、かつこのような管理者同士のコミュニケーションは知らないのもあり、なんとも。
+    要はコミュニティで高め合うって文脈と思う。組織設計としてはそうすべきだが、個人がそこに期待しては先に進まないという認識。
