--- a/contents/booklogs/2025/2025-10.yml
+++ b/contents/booklogs/2025/2025-10.yml
@@ -274,3 +274,13 @@
     その支援とは指導者・教材・共同学習者である。管理者の場合はこれらを得るのが難しく、だからこそ中間管理者同士のコミュニケーションが発生する空白地帯が重要になる。
     わたしは友人と輪読する以外は独学だけで、かつこのような管理者同士のコミュニケーションは知らないのもあり、なんとも。
     要はコミュニティで高め合うって文脈と思う。組織設計としてはそうすべきだが、個人がそこに期待しては先に進まないという認識。
+- date: 2025-10-28
+  bookTitle: Slack ゆとりの法則
+  pages: 184 ~ 194
+  notes: |
+    27 空白地帯にとって競争は強調を阻害する危険性がある。このような競争はゆとりのない権威主義的な管理で起こる。
+    ゆとりのない権威主義的な管理では時間をかけた訓練が行えない。変化には競争ではなく協調、時間かけられることが必要。
+    28 変化の管理は楽観的にみられるが難しい。変化の中では通常の権力は機能しない。変化を始めるまでに積み上げた信頼の貯金を前払いする必要がある。
+    従来のトップダウンの管理は変化の中でなくても知的組織には機能しない。
+    信頼の貯金てやつ、個人的に信頼ポイントと呼んでたやつだ。
+    信頼ポイントがないと新しい何かを提案し自分で勝手に始めるのも難しいから、新しい組織に入ったらまず始めはポイント稼ぎに従事するのが肝要。
