--- a/contents/booklogs/2025/2025-10.yml
+++ b/contents/booklogs/2025/2025-10.yml
@@ -284,3 +284,12 @@
     従来のトップダウンの管理は変化の中でなくても知的組織には機能しない。
     信頼の貯金てやつ、個人的に信頼ポイントと呼んでたやつだ。
     信頼ポイントがないと新しい何かを提案し自分で勝手に始めるのも難しいから、新しい組織に入ったらまず始めはポイント稼ぎに従事するのが肝要。
+- date: 2025-10-29
+  bookTitle: Slack ゆとりの法則
+  pages: 195 ~ 211
+  notes: |
+    第Ⅳ部 リスクとリスク管理。リスクを取らなければ成功しない。リスク管理は、全体として成功するまでに起こる多数の小さな失敗を管理する。リスク管理に加え、リスクが実現したときに備えたゆとりも必要。
+    29 リスク管理はあくまで確率的な方法でしかない。それでもどの程度の不確定性があるか評価するには使える。何にでも「できる」と考える管理はリスク管理と逆の思考であり両立できない。これは個人に限った話で、組織では複数人で両立できる。
+    30 全体的なリスクは直接管理できないがそれは部分的なリスクの積み重ねであるため、それらは管理することができる。
+    管理にはリスクの抑制と軽減があり、抑制は発生するかわからないリスクのために余分に確保しておく柔軟性、軽減はリスクが発生した場合に備えた計画・準備を意味する。
+    これまで、バッファをさば取りした挙げ句集めたバッファも何故か減らしてしまう、当事者が報告したリスクを捨ててしまう、というプロジェクトは何度かあった。リスクを過小評価してたのと同時に締め上げればもっと速くできると思われてたんやろな。
