--- a/contents/booklogs/2025/2025-10.yml
+++ b/contents/booklogs/2025/2025-10.yml
@@ -293,3 +293,15 @@
     30 全体的なリスクは直接管理できないがそれは部分的なリスクの積み重ねであるため、それらは管理することができる。
     管理にはリスクの抑制と軽減があり、抑制は発生するかわからないリスクのために余分に確保しておく柔軟性、軽減はリスクが発生した場合に備えた計画・準備を意味する。
     これまで、バッファをさば取りした挙げ句集めたバッファも何故か減らしてしまう、当事者が報告したリスクを捨ててしまう、というプロジェクトは何度かあった。リスクを過小評価してたのと同時に締め上げればもっと速くできると思われてたんやろな。
+- date: 2025-10-30
+  bookTitle: Slack ゆとりの法則
+  pages: 212 ~ 230
+  notes: |
+    31 持ちうる最大の速度で仕事することは危険速度で走るのと同じで、事故をすればただでは済まない。余裕を持った安全速度で走るべきだ。
+    このリスク軽減措置は何もリスクが顕現しなかった危険速度の場合よりも少しコストがかかる。
+    そのため成功のことしか考えていない多くの組織にはリスク管理がただの邪魔者に見える。
+    32 変化のない時代の生産思考的な世界ではリスクを管理する必要がなかった。
+    現代の変化の時代ではリスク回避は機会の損失であり、新しい市場・新しい技術といった大きなリスクを取らなければ成功しない。
+    小さなリスクしか取っていないなら今すぐそれをやめて大きなリスクを取ることにコストを割くべき。
+    33 仕立て屋と王女の逸話。目先の目標に気を取られ思考の転換ができるゆとりがないと、新たな更に魅力的なチャンスを手にできない、てことかな？
+    これで本書は終わり。本書も面白かった。ピープルウエアとテーマは重なるが、そのキーとして終始ゆとりに焦点を当てていたので重要さがすり込まれた感じがする。
