--- a/contents/booklogs/2025/2025-10.yml
+++ b/contents/booklogs/2025/2025-10.yml
@@ -305,3 +305,13 @@
     小さなリスクしか取っていないなら今すぐそれをやめて大きなリスクを取ることにコストを割くべき。
     33 仕立て屋と王女の逸話。目先の目標に気を取られ思考の転換ができるゆとりがないと、新たな更に魅力的なチャンスを手にできない、てことかな？
     これで本書は終わり。本書も面白かった。ピープルウエアとテーマは重なるが、そのキーとして終始ゆとりに焦点を当てていたので重要さがすり込まれた感じがする。
+- date: 2025-10-31
+  bookTitle: 熊とワルツを リスクを楽しむプロジェクト管理
+  pages: i ~ viii, 1 ~ 6
+  notes: |
+    はじめに～プロローグまで。
+    ウィリアム・キングドン・クリフォードを引き合いに出し、信じられないことを疑念をねじ伏せて信じることの問題点はそこに権利があったのかという点に触れる。
+    眼の前の証拠に基づき信じる権利があったものだけを信じるのがリスク管理ととく。
+    リスク管理をすべき理由と準備が整うまですべきでない理由がるのが興味深い。
+    日本版序文にて、みずほ銀行の失敗でリスクという言葉を 20 回近く使ったという話に触れ、(当時の)日本のリスク管理の遅れを嘆いている。
+    現代でも割と最近のみずほがスカイツリー 7 本分のコストを費やした体たらくを見れば何も変わっていないのがよく分かるな。
