--- a/contents/booklogs/2025/2025-10.yml
+++ b/contents/booklogs/2025/2025-10.yml
@@ -315,3 +315,17 @@
     リスク管理をすべき理由と準備が整うまですべきでない理由がるのが興味深い。
     日本版序文にて、みずほ銀行の失敗でリスクという言葉を 20 回近く使ったという話に触れ、(当時の)日本のリスク管理の遅れを嘆いている。
     現代でも割と最近のみずほがスカイツリー 7 本分のコストを費やした体たらくを見れば何も変わっていないのがよく分かるな。
+- date: 2025-11-01
+  bookTitle: 熊とワルツを リスクを楽しむプロジェクト管理
+  pages: 7 ~ 32
+  notes: |
+    1 ~ 3
+    リスクを取らなければチャンスを得ることはできない。変化の時代においては尚更で、リスク回避するだけでは競争に負けてしまう。
+    リスクを無視できるのはリスクを全て洗い出し評価した結果対応しようがないものだけ。
+    リスク管理は将来起こり得る問題を管理する。
+    リスクが実現することをリスク移行、実現したことは移行指標という。実現したリスクを管理するのが危機管理。
+    リスクが実現したとき危機管理が適切に機能するよう事前に対策する。これがリスク軽減。
+    リスク発見、エクスポージャー分析、危機対応計画、軽減、継続的な移行監視、これらは大抵の人が生活で実践しているが、仕事では組織文化との衝突などで難しい場面がある。
+    リスク管理不在の例としてデンバー国際空港。 DIA の ABHS ではデンバー市がリスク管理すべきだった。
+    リスク管理はおとなのプロジェクト管理、というのが面白い。
+    これが意味するのは、バラ色の目標を夢見るのでなく現実を見て理性的に計画しましょう、ということろかな。
