--- a/contents/booklogs/2025/2025-11.yml
+++ b/contents/booklogs/2025/2025-11.yml
@@ -12,3 +12,18 @@
     リスク管理不在の例としてデンバー国際空港。 DIA の ABHS ではデンバー市がリスク管理すべきだった。
     リスク管理はおとなのプロジェクト管理、というのが面白い。
     これが意味するのは、バラ色の目標を夢見るのでなく現実を見て理性的に計画しましょう、ということろかな。
+- date: 2025-11-02
+  bookTitle: 熊とワルツを リスクを楽しむプロジェクト管理
+  pages: 33 ~ 58
+  notes: |
+    4 ~ 7
+    リスク管理すべき理由。
+    不確定性・未知の要素を減らプロジェクトの成功率を高める。
+    リスクの程度が分かり、積極的にリスクを取ることで成功と成長の機会を高める。
+    リスク管理をすべきでない理由。
+    組織が未成熟で、現実を受け入れられない、ひとりでリスクすると危険に見合われるような場合。
+    またはデータが不足し不確定範囲が広すぎる場合。
+    不確定要素を嫌う組織ではリスク管理が機能しない。
+    失敗・拒否・中止という言葉を恐れるあまり、迫りつつある重大なリスクに目を瞑る。
+    程度の低い組織で批判的思考でいると世界のどこでもバカにされるんやなというのがよく分かる。その場合に取れる手段は場所を変えることというのもどこでも同じか。
+    リスク管理がプロジェクト成功率を高めるというのを示してもらえると背中を押してもらえる感じがする。
