--- a/contents/booklogs/2025/2025-11.yml
+++ b/contents/booklogs/2025/2025-11.yml
@@ -27,3 +27,15 @@
     失敗・拒否・中止という言葉を恐れるあまり、迫りつつある重大なリスクに目を瞑る。
     程度の低い組織で批判的思考でいると世界のどこでもバカにされるんやなというのがよく分かる。その場合に取れる手段は場所を変えることというのもどこでも同じか。
     リスク管理がプロジェクト成功率を高めるというのを示してもらえると背中を押してもらえる感じがする。
+- date: 2025-11-03
+  bookTitle: 熊とワルツを リスクを楽しむプロジェクト管理
+  pages: 53 ~ 68
+  notes: |
+    7 ~ 8
+    プロジェクト管理は一か八かの勝負に出るのでなく失敗をする前提で失敗の程度を抑えるのが重要。よって運に頼ってはいけない。
+    プロジェクトの完成までの不確定性を定量化するすべとしてリスク図がある。
+    完成する可能性がある最初の日(N(ナノパーセント)日と書かれている)から最後の日までを不確定幅とすると、その幅の広さはその組織の開発プロセスにどれだけノイズがあるかで決まる。
+    過去の実績が記録されていれば経験的にノイズの量を決定でき、それだけ不確定性を減らすことができる。
+    ソフトウェア業界全体では概ね不確定幅は 150 ~ 200% 、 N 日まで 25 ヶ月の場合は最大 + 50 ヶ月で 75 ヶ月かかる可能性がある。
+    わたしが計画を立てるときは真のデッドラインと目標日を分けるが、確率的に図示はしてこなかったから参考になる。
+    図示すれば N 日を計画に採用するのが如何にアホらしいかも説明しやすかろう。
