--- a/contents/booklogs/2025/2025-11.yml
+++ b/contents/booklogs/2025/2025-11.yml
@@ -39,3 +39,17 @@
     ソフトウェア業界全体では概ね不確定幅は 150 ~ 200% 、 N 日まで 25 ヶ月の場合は最大 + 50 ヶ月で 75 ヶ月かかる可能性がある。
     わたしが計画を立てるときは真のデッドラインと目標日を分けるが、確率的に図示はしてこなかったから参考になる。
     図示すれば N 日を計画に採用するのが如何にアホらしいかも説明しやすかろう。
+- date: 2025-11-04
+  bookTitle: 熊とワルツを リスクを楽しむプロジェクト管理
+  pages: 69 ~ 84
+  notes: |
+    9
+    プロジェクトが遅れる要因として計画の遅れるより計画外の作業の発生が多い。
+    このようなリスクを認識する情報源として過去のプロジェクトの実績が使える。
+    一覧したリスクに対してできるのは回避(機会の損失)・抑制(実現した場合の準備)・軽減(実現する前の措置)・かわす(ただの運)のいずれか。
+    請負業者に作業を依頼していても明示的に託したリスク以外は自分たちで管理する必要がある。
+    個々の抑制に対するコストはリスク・エクスポージャー(コスト(時間・資金)×確率)を算出、それに基づきリスク準備(時間的・資金的余裕)を確保する。
+    軽減コストはリスクが実現しなくてもかかるが、リスクが実現した際のリスク準備を減らす。
+    市場が失われるとかのすべて台無しにするようなリスクをショートストッパーといい、発生しないという仮定でのみ対策できる。この責任は組織の上層部が担う。
+    移行指標の精度と早さはトレードオフの関係にある。危機対応の緊急性と誤報のコストも考慮して設定する必要がある。
+    次の長期案件でやってみようか。どのみちひとりなので色々試せる。
