--- a/contents/booklogs/2025/2025-11.yml
+++ b/contents/booklogs/2025/2025-11.yml
@@ -50,6 +50,6 @@
     請負業者に作業を依頼していても明示的に託したリスク以外は自分たちで管理する必要がある。
     個々の抑制に対するコストはリスク・エクスポージャー(コスト(時間・資金)×確率)を算出、それに基づきリスク準備(時間的・資金的余裕)を確保する。
     軽減コストはリスクが実現しなくてもかかるが、リスクが実現した際のリスク準備を減らす。
-    市場が失われるとかのすべて台無しにするようなリスクをショートストッパーといい、発生しないという仮定でのみ対策できる。この責任は組織の上層部が担う。
+    市場が失われるとかのすべて台無しにするようなリスクをショーストッパーといい、発生しないという仮定でのみ対策できる。この責任は組織の上層部が担う。
     移行指標の精度と早さはトレードオフの関係にある。危機対応の緊急性と誤報のコストも考慮して設定する必要がある。
     次の長期案件でやってみようか。どのみちひとりなので色々試せる。
