--- a/contents/booklogs/2025/2025-11.yml
+++ b/contents/booklogs/2025/2025-11.yml
@@ -53,3 +53,18 @@
     市場が失われるとかのすべて台無しにするようなリスクをショーストッパーといい、発生しないという仮定でのみ対策できる。この責任は組織の上層部が担う。
     移行指標の精度と早さはトレードオフの関係にある。危機対応の緊急性と誤報のコストも考慮して設定する必要がある。
     次の長期案件でやってみようか。どのみちひとりなので色々試せる。
+- date: 2025-11-05
+  bookTitle: 熊とワルツを リスクを楽しむプロジェクト管理
+  pages: 85 ~ 106
+  notes: |
+    10 ~ 11
+    リスク管理を 9 つのステップ(本書参照)で実施する上で厄介な点がある。
+    最も楽観的なスケジュール N(ナノパーセント日) を基点に許容できる納期を約束すべき点。 無茶な期日を N に設定したがる人はそれが実現可能なことを証明しなければならない。
+    顧客に約束する納期は完成する確率が高いためプロジェクトの目標とするには低すぎる点。 N から納期までの間で高めの目標を設定しなければならない。
+    期日がハードコミットされるとどうしても遅れてしまう点。この場合バージョンを細かく区切って段階的なリリースをするインクリメンタルな開発手法をで対応しなければならない。
+    リスク調査を組織内に公表できるようにすべき点。万が一正直者が不利に立たされるようであれば誰もリスク調査を公表しない。
+    わからない内のわかっていことを可視化する術としてリスク図を使う。リスク図の切り口の % を使うのでなく図自体がリスク全体を表す。
+    生産モデルの出力 N(ナノパーセント日) と原因リスク(Slack でいうところの部分リスク)を入力にするリスクモデルの出力が全体リスクとなる。
+    リスク図の表示形式としては漸増図と累積図がある。
+    このリスク管理の基礎の部分はデッドラインで直感をモデル化したシミュレーションとして出てたやつよな。
+    つまりリスク管理と直感はつながってるわけか。
